--- a/views/stylist.html.twig
+++ b/views/stylist.html.twig
@@ -30,7 +30,7 @@
                 <button type='submit' class='btn btn-info'>ADD CLIENT</button>
             </form>
 
-            <form action='/delete_restaurants' method='post'>
+            <form action='/delete_clients' method='post'>
                 <button type='submit' class='btn btn-danger'>Clear list</button>
             </form>
 
