--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class='container'>
-            <h1>Stylists:</h1>
+            <h1>WELCOME TO HAIR SALON</h1>
             <form action="/stylists" method="post">
                 <div class='form-group'>
                     <label for="stylist_name">ADD A STYLIST:</label>
