--- a/views/stylist_edit.html.twig
+++ b/views/stylist_edit.html.twig
@@ -8,7 +8,7 @@
 
             <h1>Update {{ stylist.getStylistName }}</h1>
 
-                <form action="/stylists/{{ stylist.getId }}" method="post">
+                <form action="/stylist/{{ stylist.getId }}" method="post">
                     <input name="_method" type="hidden" value="patch">
 
                     <label for="new_stylist_name">CHANGE IT:</label>
@@ -17,7 +17,7 @@
                     <button type="submit">Update</button>
                 </form>
 
-                <form action="/stylists/{{ stylist.getId }}" method="post">
+                <form action="/stylist/{{ stylist.getId }}" method="post">
                     <input name="_method" type="hidden" value="delete">
 
                     <button type="submit">DELETE</button>
