--- a/views/client_edit.html.twig
+++ b/views/client_edit.html.twig
@@ -8,7 +8,7 @@
 
             <h1>Update {{ client.getClientName }}</h1>
 
-                <form action="/clients/{{ client.getId }}" method="post">
+                <form action="/client/{{ client.getId }}" method="post">
                     <input name="_method" type="hidden" value="patch">
 
                     <label for="new_client_name">CHANGE IT:</label>
@@ -17,7 +17,7 @@
                     <button type="submit">Update</button>
                 </form>
 
-                <form action="/clients/{{ client.getId }}" method="post">
+                <form action="/client/{{ client.getId }}" method="post">
                     <input name="_method" type="hidden" value="delete">
 
                     <button type="submit">DELETE</button>
